# ask-notebooklm

./: .env.example  AGENTS.md  LICENSE  README.md  TODO.md  pyproject.toml
doc/: decisions.md  requirements.md
src/ask_notebooklm/: browser_login.py  cli.py  config.py  login_service.py  notebooklm_client.py  server.py  services.py  session_store.py
tests/: test_ask_service.py  test_browser_login.py  test_cli.py  test_config.py  test_login_service.py  test_mcp_tools.py  test_mcp_wiring.py  test_notebooklm_client.py  test_session_store.py  test_stdio_integration.py
