[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ask-notebooklm"
version = "0.1.0"
description = "Read-only stdio MCP server for asking questions against a NotebookLM notebook."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Alexey Nilov" },
]
keywords = ["mcp", "notebooklm", "codex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.28,<1",
    "mcp>=1.26,<2",
    "playwright>=1.55,<2",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "build>=1,<2",
    "mypy>=2,<3",
    "pytest>=8,<9",
    "ruff>=0.15,<1",
    "twine>=6,<7",
]

[project.scripts]
ask-notebooklm = "ask_notebooklm.cli:main"

[project.urls]
Repository = "https://github.com/AlexeyNilov/ask-notebooklm"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
mypy_path = "src"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
